<resources>
    <string name="app_name" translation_description="Food Detection demo app [CHAR_LIMIT=40]">Food.AI</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_about">About</string>

    <string name="choose_gender">Choose your Gender?</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="start_body_analysis">START BODY ANALYSIS</string>
    <string name="action_language">العربية</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="health_monitor">HEALTH MONITOR</string>
    <string name="your_profile_summary">YOUR PROFILE SUMMARY</string>
    <string name="show_analysis">show Analysis</string>
    <string name="restart_body_analysis">Restart Body Analysis</string>
    <string name="doubleBackToast">Press Back again to Exit</string>
    <string name="healthy_recipes">Healthy Recipes</string>


    <string name="notification_text"> reminder to drink a cup of water</string>
    <string name="notification_string">Water Reminder</string>
    <string name="reminders_title">Reminders</string>
    <string name="years">Years</string>
    <string name="kg">kg</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">AGE</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="analyze_data">Analyze Data</string>
    <string name="signup_failed">Something Wrong</string>
    <string name="fname_val">Please provide your first name</string>
    <string name="email_val">Please provide a valid email address</string>
    <string name="password_val">The password should have 8 or more characters</string>
    <string name="password">Password</string>
    <string name="cntn">Login</string>
    <string name="forgotpass">Forget Pass</string>
    <string name="welcome">Welcome</string>
    <string name="login_ill">Girl holding key next to phone, unlock</string>
    <string name="email">Email</string>
    <string name="login_failed">Login Failded</string>
</resources>
