<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="org.nutritionpoint.LoginPage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_ill"
        android:src="@drawable/ic_undraw_unlock_24mb"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:padding="10dp"
                android:background="@drawable/ed_back"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:padding="10dp"
                android:textColorHint="@color/black"
                android:background="@drawable/ed_back"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/cntn"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:background="#00bbff"
            app:backgroundTint="#00bbff"/>

        <Button
            android:id="@+id/forgot_pass"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/ed_back"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="SignUp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>